# Team104

./: .gitignore  6.2会议记录.txt  README.md  SDD104-设计说明书.doc  SDP104-机器人开发计划.doc  SPD104-需求分析文档.doc  SPD104-需求规格说明书.doc  STR104-测试报告.doc  STR104-测试报告1.1.doc  STR104-测试报告1.2.doc  STR104-测试报告1.4.doc  launch.py  ~$P104-机器人开发计划.doc
ObjectRecognition/: CMakeLists.txt  package.xml
ObjectRecognition/launch/: 5_shopping.launch
ObjectRecognition/src/: shopping.cpp
ObjectRecognition/src/ImageRecognition/: sdk_ImageRecognition.py
ROSVis/: .qmake.stash  ApplicationFlow.qml  ApplicationFlowForm.ui.qml  ButtonImage.qml  ChooseProduct.qml  ChooseProductForm.ui.qml  Constants.qml  Data.qml  Map.qml  Movement.qml  MovementForm.ui.qml  Navigating.qml  NavigatingForm.ui.qml  NavigationButton.ui.qml  NewButton.qml  ROSVis.sln  ROSVis.vcxproj  ROSVis.vcxproj.filters  SideBar.qml  SideBarForm.ui.qml  UserButton.qml  main.cpp  main.qml  qml.qrc
ROSVis/debug/: moc_predefs.h
ROSVis/x64/Debug/ROSVis.tlog/: CL.5028.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  ROSVis.lastbuildstate  ROSVis.write.1u.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog
ROS_Vis/: ApplicationFlow.qml  BrewingForm.ui.qml  ButtonImage.qml  ChoosingCoffee.ui.qml  ChoosingCoffeeKey.qml  CupForm.ui.qml  EmptyCup.qml  EmptyCupForm.ui.qml  NavigationButton.ui.qml  ROS_Vis.pro  SideBar.qml  SideBarForm.ui.qml  main.cpp  main.qml  qml.qrc
Test Code/: TestCode.py  TestCode2.py
bash/: backward.sh  forward.sh  left.sh  right.sh  turnleft.sh  turnright.sh
build-ROSVis-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
build-ROS_Vis-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-ROS_Vis-Desktop_Qt_5_12_3_MinGW_64_bit-Debug/debug/: qrc_qml.cpp
catkin_ws/: .ycm_extra_conf.py
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/waterplus_map_tools/: AddNewWaypointRequest.h  (+10 more)
catkin_ws/src/my_vel_package/: package.xml
catkin_ws/src/rosvis/: CMakeLists.txt
catkin_ws/src/wpb_home_apps/: CMakeLists.txt
documents/: README.md  SDD104-设计说明书.docx  SDP104-机器人开发计划.doc  SDP104.doc  SPD104-需求分析文档.doc  TEAM 104.pptx  中期总结.md  会议记录.md  对照表.xlsx  项目总结.docx
freenect2/include/libfreenect2/: export.h
freenect2/lib/: libfreenect2.so.0.2.0
freenect2/lib/pkgconfig/: freenect2.pc
my_vel_package/: CMakeLists.txt
my_vel_package/src/: test.cpp  vel_backward.cpp  vel_ctrl.cpp  vel_ctrl.cpp~  vel_ctrl2.0.cpp  vel_forward.cpp  vel_foward.cpp  vel_left.cpp  vel_right.cpp  vel_stop.cpp  vel_turnleft.cpp  vel_turnright.cpp
my_vel_package2/: CMakeLists.txt  package.xml
my_vel_package2/src/: READ.txt  read.cpp  test1.cpp  test2.cpp  test3.cpp  vel_ctrl.cpp  vel_ctrl.h  vel_rsignal.cpp  vel_stop.cpp  vel_test.cpp  vel_turnleft.cpp  write.cpp
opt/ros/indigo/share/qwt_dependency/: package.xml
opt/ros/indigo/share/qwt_dependency/cmake/: qwt_dependencyConfig.cmake
opt/ros/indigo/share/rqt_console/: package.xml
opt/ros/indigo/share/rqt_console/cmake/: rqt_consoleConfig.cmake
rosvis/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml  package.xml~
rosvis/include/rosvis/: buyproduct.hpp  gui.h  main_window.hpp  robotcontrol.hpp  robotcontrol.hpp~
rosvis/launch/: rosvis.launch
rosvis/resources/: images.qrc
rosvis/src/: buyproduct.cpp  buyproduct.cpp~  guimain.cpp  main.cpp  main_window.cpp  main_window.cpp~  qnode.cpp  robotcontrol.cpp
rosvis/src/ImageRecognition/: Test_ImageRecognition.py  sdk_ImageRecognition.py  setup.py
rosvis/src/ImageRecognition/get_authorization/: Main.java  Sign.java
rosvis/src/UnitTest/: Test_ProcColorCB.py  main.cpp  main_KeywordCB.cpp  main_ProcColorCB.cpp
rosvis/src/action_manager/: action_manager.cpp~
rosvis/ui/: buyproduct.ui  main_window.ui  robotcontrol.ui
test-code/: addpoint-test.cpp  findword-test.cpp  fsm-test.cpp  grab-test.cpp  pass-test.cpp  speak-test.cpp
wpb_home_apps/: CMakeLists.txt  package.xml
wpb_home_apps/include/: 10_home_script.h  6_free_script.h  7_recreational_script.h  8_innovation_script.h  9_campus_script.h  action_manager.h  struct.h  team104_shopping.h
wpb_home_apps/src/: campus_test.cpp  entrance_detect.cpp  follow.cpp  free_test.cpp  gpsr.cpp  home_test.cpp  innovation_test.cpp  object_find.cpp  object_recognition.cpp  path_plan.cpp  path_plan_ori.cpp  person_recognition.cpp  recreational_test.cpp  shopping.cpp  speech_recognition.cpp  who_is_who.cpp
wpb_home_apps/src/ImageRecognition/: sdk_ImageRecognition.py
wpb_home_apps/src/UnitTest/: IR_test.py  shopping.cpp
wpb_home_apps/src/action_manager/: action_manager.cpp  action_manager.cpp~
wpb_home_apps/src/scripts/: 7_recreational_script.cpp  9_campus_script.cpp  free_script.cpp  home_script.cpp  innovation_script.cpp  innovation_script.cpp~
(+1901 files in other folders)
