<?xml version="1.0"?>
<package>
  <name>rosvis</name>
  <version>0.1.0</version>
  <description>

     rosvis

  </description>
  <maintainer email="javierastephanie@gmail.com">Javiera Stephanie</maintainer>
  <author>Javiera Stephanie</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>wpb_home_apps</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <!--<build_export_depend>qt_build roscpp rospy pcl_conversions pcl_ros wpb_home_apps libqt4-dev</build_export_depend>-->
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>wpb_home_apps</run_depend>
  <run_depend>libqt4-dev</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
 
</package>
