<?xml version="1.0"?>
<package>
  <name>rosvis</name>
  <version>0.1.0</version>
  <description>

     rosvis

  </description>
  <maintainer email="javierastephanie@gmail.com">Javiera Stephanie</maintainer>
  <author>Javiera Stephanie</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

<build_depend>libpcl-all-dev</build_depend>
<build_depend>tf</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>visualization_msgs</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>actionlib</build_depend>
<build_depend>message_generation</build_depend>
<build_depend>wpb_home_bringup</build_depend>
<build_depend>wpb_home_tutorials</build_depend>
<build_depend>wpb_home_behaviors</build_depend>
<build_depend>xfyun_waterplus</build_depend>
<build_depend>waterplus_map_tools</build_depend>

<run_depend>libpcl-all</run_depend>
<run_depend>tf</run_depend>
<run_depend>sensor_msgs</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>pcl_ros</run_depend>
<run_depend>visualization_msgs</run_depend>
<run_depend>cv_bridge</run_depend>
<run_depend>actionlib</run_depend>
<run_depend>message_runtime</run_depend>
<run_depend>wpb_home_bringup</run_depend>
<run_depend>wpb_home_tutorials</run_depend>
<run_depend>wpb_home_behaviors</run_depend>
<run_depend>xfyun_waterplus</run_depend>
<run_depend>waterplus_map_tools</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
 
</package>
