<package>
  <name>rqt_console</name>
  <version>0.4.8</version>
  <description>rqt_console provides a GUI plugin for displaying and filtering ROS messages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
  <author>Aaron Blasdel</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_console</url>
  <url type="repository">https://github.com/ros-visualization/rqt_console</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_console/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_logger_level</run_depend>
  <run_depend>rqt_py_common</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
